@@ -1,3 +1,12 @@
+2024-02-02T08:08:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7753110885 # 79
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-02
+* notice: last 14d: unq all: 3 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 314 659 / 330 689
+* notice: next accum: outdated-unq outdated-all / unq all: 314 659 / 331 690
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-19 2024-02-02]
+
 2024-02-02T00:30:11Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7749545847 # 78
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-02
